# txt2plotter

./: .env.example  .gitignore  CLAUDE.md  README.md  example_prompts.txt  main.py  pyproject.toml
docs/plans/: 2025-01-18-txt2svg-design.md  2025-01-18-txt2svg-implementation.md
modules/: __init__.py  optimizer.py  prompt_engineer.py  raster_generator.py  utils.py  vectorizer.py
tests/: __init__.py  test_vectorizer.py
